# mylog

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  configure.h.in  gtest.cmake  mylog.h
demo/: CMakeLists.txt  main.cpp
include/: api.h  base_logger.h  constants.h  daily_logger.h  file_logger.h  formatter.h  logger.h  stream_logger.h  timer.h  util.h
src/: CMakeLists.txt  api.cpp  core.cpp  daily_logger.cpp  file_logger.cpp  formatter.cpp  logger.cpp  main.cpp  stream_logger.cpp  timer.cpp  util.cpp
test/: CMakeLists.txt  daily_log_test.cpp  file_log_test.cpp  simple_log_test.cpp  timer_test.cpp  type_log_test.cpp  util_test.cpp
test/include/: file_test_handler.h
